Opened 12 years ago

Closed 8 years ago

Last modified 8 years ago

#1680 closed defect (fixed)

atrac3: fix current duration for atrac3 in wav

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: atrac3 wav
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://samples.mplayerhq.hu/A-codecs/ATRAC3/mc_sich_at3_066.wav

C:\>ffmpeg -i mc_sich_at3_066.wav out.wav
ffmpeg version N-43803-g2c0b164 Copyright (c) 2000-2012 the FFmpeg developers
  built on Aug 22 2012 02:22:47 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 70.100 / 51. 70.100
  libavcodec     54. 54.100 / 54. 54.100
  libavformat    54. 25.104 / 54. 25.104
  libavdevice    54.  2.100 / 54.  2.100
  libavfilter     3. 13.100 /  3. 13.100
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
Guessed Channel Layout for  Input Stream #0.0 : stereo
Input #0, wav, from 'mc_sich_at3_066.wav':
  Duration: 00:00:34.97, bitrate: 66 kb/s
    Stream #0:0: Audio: atrac3 (p[2][0][0] / 0x0270), 44100 Hz, stereo, s16, 66
kb/s
Output #0, wav, to 'out.wav':
  Metadata:
    encoder         : Lavf54.25.104
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, stereo, s16
, 1411 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (atrac3 -> pcm_s16le)
Press [q] to stop, [?] for help
Multiple frames in a packet from stream 0
[wav @ 0x1fd1500] st:0 PTS: 1024 DTS: 1024 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 2048 DTS: 2048 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 3072 DTS: 3072 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 4096 DTS: 4096 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 5120 DTS: 5120 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 6144 DTS: 6144 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 7168 DTS: 7168 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 8192 DTS: 8192 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 9216 DTS: 9216 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 10240 DTS: 10240 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 11264 DTS: 11264 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 12288 DTS: 12288 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 13311 DTS: 13311 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 14335 DTS: 14335 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 15359 DTS: 15359 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 16383 DTS: 16383 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 17407 DTS: 17407 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 18431 DTS: 18431 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 19455 DTS: 19455 < 20479 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 2048 DTS: 2048 < 21503 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 3072 DTS: 3072 < 21503 invalid, clipping
[...]
[wav @ 0x1fd1500] st:0 PTS: 87039 DTS: 87039 < 92159 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 88063 DTS: 88063 < 92159 invalid, clipping
[wav @ 0x1fd1500] st:0 PTS: 89087 DTS: 89087 < 92159 invalid, clipping
size=    6032kB time=00:00:02.11 bitrate=23386.0kbits/s
video:0kB audio:6032kB subtitle:0 global headers:0kB muxing overhead 0.000745%

Change History (4)

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: atrac3 wav added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Elon Musk, 9 years ago

Component: undeterminedavcodec

Needs trivial parser.

comment:3 by Elon Musk, 8 years ago

Resolution: wontfix
Status: openclosed

Actually this can't be fixed. There should be duration chunk added to wav.

comment:4 by Michael Niedermayer, 8 years ago

Resolution: wontfixfixed
Note: See TracTickets for help on using tickets.