avcodec/utils: Fix duration of ATRAC3 packets

Fixes ticket1680

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>